# tron

./: .clang-format  Cargo.toml  build.rs
assets/models/: monkey.glb  teapot.glb
assets/shaders/: opaque_mesh.frag  opaque_mesh.vert  scatter_copy.comp  triangle.vert
assets/shaders/math/: color.glsl  const.glsl  frustum.glsl  sphere.glsl
assets/shaders/uniforms/: bindless.glsl  globals.glsl  object.glsl
ecs/: Cargo.toml
ecs-common/: Cargo.toml
ecs/src/: lib.rs
ecs/src/components/: hierarchy.rs  mod.rs  transform.rs
ecs/src/events/: hierarchy.rs  mod.rs
ecs/src/util/: hierarchy.rs  mod.rs
game/: Cargo.toml
game/src/: main.rs  scene.rs  triangle.frag
game/src/game/: mod.rs  resources.rs
game/src/game/components/: camera.rs  mesh_instance.rs  mod.rs
gfx/: Cargo.toml
gfx-proc/: Cargo.toml
gfx-proc/src/: as_shader_layout.rs
gfx/macros/: Cargo.toml
gfx/macros/src/: as_shader_layout.rs  lib.rs
gfx/src/: command_buffer.rs  device.rs  graphics.rs  lib.rs  physical_device.rs  queue.rs  surface.rs  types.rs
gfx/src/device/: descriptor_alloc.rs  epochs.rs  mod.rs
gfx/src/encoder/: command_buffer.rs  mod.rs
gfx/src/layout/: array.rs  matrix.rs  mod.rs  primitive.rs
gfx/src/physical/: features.rs  mod.rs  selector.rs
gfx/src/physical_device/: features.rs  mod.rs
gfx/src/resources/: buffer.rs  buffer_view.rs  descriptor_set.rs  descriptor_set_layout.rs  fence.rs  framebuffer.rs  image.rs  image_view.rs  mod.rs  pipeline.rs  pipeline_layout.rs  render_pass.rs  sampler.rs  semaphore.rs  shader_module.rs
gfx/src/util/: access.rs  mod.rs  traits.rs
renderer/: Cargo.toml
renderer/src/: alloc.rs  base.rs  buffer.rs  command_buffer.rs  device.rs  graphics.rs  lib.rs  physical_device.rs  pipeline.rs  pipeline_layout.rs  queue.rs  resource_handle.rs  resource_registry.rs  shader_module.rs  surface.rs  swapchain.rs  sync.rs  types.rs
renderer/src/components/: camera.rs  mesh_instance.rs  mod.rs
renderer/src/managers/: material_manager.rs  mesh_manager.rs  mod.rs  object_manager.rs  time_manager.rs
renderer/src/managers/material_manager/: material_buffer.rs  material_data.rs  mod.rs
renderer/src/managers/mesh_manager/: mod.rs
renderer/src/pipelines/: mod.rs  opaque_mesh_pipeline.rs
renderer/src/render_graph/: mod.rs
renderer/src/render_graph/materials/: debug_material.rs
renderer/src/render_graph/render_passes/: main_pass.rs
renderer/src/render_passes/: main_pass.rs  mod.rs
renderer/src/resources/: buffer.rs  fence.rs  image.rs  mod.rs  semaphore.rs
renderer/src/shader_preprocessor/: mod.rs  virtual_fs.rs
renderer/src/shaders/: mod.rs  virtual_fs.rs
renderer/src/systems/: mod.rs
renderer/src/types/: camera.rs  material.rs  mesh.rs  mod.rs  object.rs  projection.rs  vertex.rs
renderer/src/util/: bindless_resources.rs  encoder.rs  frame_resources.rs  freelist_double_buffer.rs  frustum.rs  mod.rs  multi_buffer_arena.rs  resource_handle.rs  scatter_copy.rs  shader_preprocessor.rs  virtual_fs.rs
renderer/src/util/shader_preprocessor/: virtual_fs.rs
renderer/src/worker/: mod.rs
shared/: Cargo.toml
shared/src/: any.rs  any_vec.rs  hlist.rs  lib.rs  packed.rs  util.rs
spirv/: Cargo.toml
spirv/src/: lib.rs
src/: camera.rs  geometry_pipeline.rs  main.rs  mesh.rs  screen_pipeline.rs  sky_pipeline.rs  texture.rs  window_state.rs
src/game/: gltf_scene.rs  input_map.rs  mod.rs
src/game/res/: bike.glb
src/renderer/: mod.rs
src/renderer/managers/: mesh_manager.rs  mod.rs
src/renderer/pipelines/: geometry_pipeline.rs  mod.rs  screen_pipeline.rs  sky_pipeline.rs
src/renderer/shaders/: mesh.wgsl  sky.wgsl
src/renderer/types/: camera.rs  mesh.rs  mod.rs  texture.rs
src/scene/: mod.rs
src/shaders/: mesh.wgsl  screen.wgsl  sky.wgsl
src/util/: mod.rs  resource_handle.rs  resource_registry.rs
