[workspace]
resolver = "2"
members = ["ecs", "game", "gfx", "renderer", "shared"]

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
argh = "0.1"
arrayvec = "0.7"
bevy_ecs = { version = "0.13", default-features = false }
bitflags = "2.4"
bumpalo = "3.14"
bytemuck = { version = "1.14", features = ["derive", "align_offset", "min_const_generics", "aarch64_simd"] }
dashmap = "5.5"
glam = { version = "0.27", features = ["bytemuck"] }
gltf = "1.0"
gpu-alloc = { version = "0.6", features = ["tracing"] }
gpu-alloc-vulkanalia = { version = "0.1", features = ["tracing"] }
once_cell = "1.19"
profiling = "1.0"
puffin_http = "0.16"
rand = "0.8"
range-alloc = "0.1"
raw-window-handle = { version = "0.6.0", features = ["std"] }
shaderc = "0.8"
smallvec = { version = "1", features = ["union", "const_generics", "const_new"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
vulkanalia = { version = "0.23", features = ["libloading", "provisional"] }
winit = { version = "0.29", default-features = false }
