[workspace]
resolver = "2"
members = ["game", "gfx", "renderer", "shared"]

[profile.release]
codegen-units = 1
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
argh = "0.1"
arrayvec = "0.7"
bevy_ecs = { version = "0.14", default-features = false }
bitflags = "2.4"
bumpalo = "3.14"
bytemuck = { version = "1.14", features = [
    "derive",
    "align_offset",
    "min_const_generics",
    "aarch64_simd",
] }
cfg_aliases = "0.2"
cocoa = { version = "0.26" }
dashmap = "5.5"
glam = { version = "0.29", features = ["bytemuck"] }
gltf = "1.0"
gpu-alloc = { version = "0.6", features = ["tracing"] }
gpu-alloc-vulkanalia = { version = "0.2", features = ["tracing"] }
metal = { version = "0.29" }
objc = { version = "0.2" }
once_cell = "1.19"
profiling = "1.0"
puffin_http = "0.16"
rand = "0.8"
range-alloc = "0.1"
raw-window-handle = { version = "0.6.0", features = ["std"] }
shaderc = "0.8"
smallvec = { version = "1", features = ["union", "const_generics", "const_new"] }
thiserror = "1.0"
tikv-jemallocator = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
vulkanalia = { version = "0.25", features = ["libloading", "provisional"] }
winit = { version = "0.29", default-features = false }
