[workspace]
resolver = "2"
members = ["game", "gfx", "renderer", "shared"]

[profile.release]
codegen-units = 1
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
argh = "0.1"
arrayvec = "0.7"
bevy_ecs = { version = "0.16.1", default-features = false }
bevy_transform = { version = "0.16.1", default-features = false }
bevy_math = { version = "0.16.1", default-features = false }
bitflags = "2.4"
bumpalo = "3.14"
bytemuck = { version = "1.14", features = [
    "derive",
    "align_offset",
    "min_const_generics",
    "aarch64_simd",
] }
cfg_aliases = "0.2"
dashmap = "6.1"
glam = { version = "0.29.3", features = ["bytemuck"] }
gltf = "1.0"
gpu-alloc = { version = "0.6", features = ["tracing"] }
gpu-alloc-vulkanalia = { version = "0.2.1", features = ["tracing"] }
once_cell = "1.19"
profiling = "1.0"
puffin_http = "0.16"
rand = "0.9.2"
range-alloc = "0.1"
raw-window-handle = { version = "0.6.0", features = ["std"] }
shaderc = "0.9.1"
smallvec = { version = "1", features = ["union", "const_generics", "const_new"] }
thiserror = "2.0"
tikv-jemallocator = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
vulkanalia = { version = "0.29", features = ["libloading", "provisional"] }
winit = { version = "0.30", default-features = false }
