[package]
name = "game"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
build = "../build.rs"

[dependencies]
anyhow = "1.0"
argh = "0.1"
bytemuck = { version = "1.10", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck"] }
profiling = { version = "1.0", features = ["profile-with-puffin"] }
puffin_http = "0.15"
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winit = { version = "0.29", default-features = false, features = ["x11", "rwh_06"] }

renderer = { path = "../renderer" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[build-dependencies]
cfg_aliases = "0.1"

[features]
link-shaderc = ["renderer/link-shaderc"]
wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]
