[package]
name = "game"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
build = "../build.rs"

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
profiling = { workspace = true, features = ["profile-with-puffin"] }
puffin_http = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
winit = { workspace = true, features = ["x11"] }

renderer = { path = "../renderer" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[build-dependencies]
cfg_aliases = "0.1"

[features]
link-shaderc = ["renderer/link-shaderc"]
wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]
