[package]
name = "game"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
build = "../build.rs"

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true, features = ["bevy-support"] }
bytemuck = { workspace = true }
glam = { workspace = true }
gltf = { workspace = true }
profiling = { version = "1.0", features = ["profile-with-puffin"] }
puffin_http = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
winit = { workspace = true, features = ["x11"] }
bevy_math = { workspace = true, features = ["libm"] }

renderer = { path = "../renderer" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }

[features]
link-shaderc = ["renderer/link-shaderc"]
wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]
