[package]
name = "gfx"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
arrayvec = { workspace = true }
bitflags = { workspace = true }
bumpalo = { workspace = true }
bytemuck = { workspace = true }
dashmap = { workspace = true }
glam = { workspace = true }
gpu-alloc = { workspace = true }
gpu-alloc-vulkanalia = { workspace = true }
once_cell = { workspace = true }
raw-window-handle = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
vulkanalia = { workspace = true }
winit = { workspace = true, optional = true }

gfx-macros = { path = "./macros" }
shared = { path = "../shared" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { workspace = true }
metal = { workspace = true }
objc = { workspace = true }
