[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
bevy_ecs = { version = "0.12", default-features = false }
bumpalo = "3.14"
bytemuck = "1.0"
glam = "0.25"
once_cell = "1.19"
profiling = "1.0"
range-alloc = "0.1"
shaderc = "0.8"
thiserror = "1.0"
tracing = "0.1"
winit = { version = "0.29", default-features = false, features = ["x11", "rwh_06"] }

ecs-common = { path = "../ecs-common" }
gfx = { path = "../gfx" }
shared = { path = "../shared" }

[features]
link-shaderc = ["shaderc/build-from-source", "shaderc/prefer-static-linking"]
