[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = { workspace = true }
bevy_ecs = { workspace = true }
bumpalo = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
once_cell = { workspace = true }
profiling = { workspace = true }
range-alloc = { workspace = true }
shaderc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
winit = { workspace = true }

ecs = { path = "../ecs" }
gfx = { path = "../gfx" }
shared = { path = "../shared" }

[features]
link-shaderc = ["shaderc/build-from-source", "shaderc/prefer-static-linking"]
